--- a/Programatica.DummyApp.Mvc/appsettings.json
+++ b/Programatica.DummyApp.Mvc/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=Programatica.DummyApp.Mvc;User Id=sa;Password=qwerty123!"
+    "DefaultConnection": "Server=localhost;Database=Programatica.DummyApp.Mvc;User Id=sa;Password=secret!"
   }
 }
